--- a/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
+++ b/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
@@ -1,6 +1,6 @@
 ﻿<div ng-controller="KidDescriptionBattleCardController">
     <div id="global">
-        <md-button id="leftArrow" class="md-fab" aria-label="FAB" href="#!/kid/exercices">
+        <md-button id="leftArrow" class="md-fab" aria-label="FAB" href="#!/kid/lobby">
             <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
         </md-button>
 
