--- a/ITI.ItSchool/Templates/KidLobbyPage.html
+++ b/ITI.ItSchool/Templates/KidLobbyPage.html
@@ -10,22 +10,14 @@
             <li> <a href="#!/home">Deconnexion </a></li>
         </ul>
     </section>
-    <section class="row">
-        <div class="bs-example">
-            <ul class="nav nav-tabs" id="myTab">
-                <li><a data-toggle="tab" href="#!/kid/exercices">Sélectionner un exercice</a></li>
-            </ul>
-            <div class="tab-content">
-                <div id="sectionA" class="tab-pane fade in active">
-                    <p></p>
-                </div>
-                <div id="sectionB" class="tab-pane fade">
-                    <p>Vestibulum nec erat eu nulla rhoncus fringilla ut non neque. Vivamus nibh urna, ornare id gravida ut, mollis a magna. Aliquam porttitor condimentum nisi, eu viverra ipsum porta ut. Nam hendrerit bibendum turpis, sed molestie mi fermentum id. Aenean volutpat velit sem. Sed consequat ante in rutrum convallis. Nunc facilisis leo at faucibus adipiscing.</p>
-                </div>
-                <div id="sectionC" class="tab-pane fade">
-                    <p>WInteger convallis, nulla in sollicitudin placerat, ligula enim auctor lectus, in mollis diam dolor at lorem. Sed bibendum nibh sit amet dictum feugiat. Vivamus arcu sem, cursus a feugiat ut, iaculis at erat. Donec vehicula at ligula vitae venenatis. Sed nunc nulla, vehicula non porttitor in, pharetra et dolor. Fusce nec velit velit. Pellentesque consectetur eros.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <center>
+        <table id="selection">
+            <tr>
+                <td><md-button class="md-raised md-primary" href="#!/kid/lobby/drag_drop" id="selectExercices">Glissé-Déposé</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/kid/lobby/battleCard" id="selectExercices">Card Game</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/kid/lobby/dictation" id="selectExercices">Dictée</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/kid/lobby/cloze_exercize" id="selectExercices">Texte à trous</md-button></td>
+            </tr>
+        </table>
+    </center>
 </div>
