Some problems with disposed objects for list of cloze exercises. Work done at 70 %.

--- a/ITI.ItSchool/Templates/TeacherCustomizeClozeExercisePage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeClozeExercisePage.html
@@ -65,53 +65,10 @@
                 </form>
             </div>
             <div ng-show="MediumSelected">
-                <form name="ClozeExercise" ng-submit="SaveData()">
-
-                    <md-select ng-model="ExerciseClozeData.Chapter.Name" placeholder="Chapitre...">
-                        <md-option ng-repeat="chapter in Chapters" value="{{ chapter.Name }}" ng-model="ExerciseClozeData.Chapter.name">{{ chapter.Name }}</md-option>
-                    </md-select>
-                    <input type="text" name="exericiseName" ng-model="ExerciseClozeData.Name">
-
-                    Texte :
-                    <textarea rows="15" cols="50" ng-model="ExerciseClozeData.Text">
-                        {{ ExerciseClozeData.Text }}
-                    </textarea><br />
-
-                    Mots à cacher :
-                    <textarea rows="10" cols="50" ng-model="ExerciseClozeData.HiddenWords">
-                        {{ ExerciseClozeData.HiddenWords }}
-                    </textarea><br />
-
-                    Debug message : text is : [ {{ ExerciseClozeData.Text }} ]
-                    Chapter selected : [ {{ ExerciseClozeData.Chapter.Name }} ]
-                    Level selected : [ {{ ExerciseClozeData.Level.Name }} ]
-                    Hidden words : [ {{ ExerciseClozeData.HiddenWords }} ]
-                    <md-button class="md-raised md-primary" type="submit" name="saveText">{{ Button }}</md-button>
-                </form>
+                
             </div>
             <div ng-show="HardSelected">
-                <form name="ClozeExercise" ng-submit="SaveData()">
-                    <md-select ng-model="ExerciseClozeData.Chapter.Name" placeholder="Chapitre...">
-                        <md-option ng-repeat="chapter in Chapters" value="{{ chapter.Name }}" ng-model="ExerciseClozeData.Chapter.name">{{ chapter.Name }}</md-option>
-                    </md-select>
-                    <input type="text" name="exericiseName" ng-model="ExerciseClozeData.Name">
-
-                    Texte :
-                    <textarea rows="15" cols="50" ng-model="ExerciseClozeData.Text">
-                        {{ ExerciseClozeData.Text }}
-                    </textarea><br />
-
-                    Mots à cacher :
-                    <textarea rows="10" cols="50" ng-model="ExerciseClozeData.HiddenWords">
-                        {{ ExerciseClozeData.HiddenWords }}
-                    </textarea><br />
-
-                    Debug message : text is : [ {{ ExerciseClozeData.Text }} ]
-                    Chapter selected : [ {{ ExerciseClozeData.Chapter.Name }} ]
-                    Level selected : [ {{ ExerciseClozeData.Level.Name }} ]
-                    Hidden words : [ {{ ExerciseClozeData.HiddenWords }} ]
-                    <md-button class="md-raised md-primary" type="submit" name="saveText">{{ Button }}</md-button>
-                </form>
+                
             </div>
         </div>
 
@@ -123,7 +80,11 @@
                 </md-select>
 
                 <md-select ng-model="ExerciseClozeData.Level.Name" placeholder="Niveau...">
-                    <md-option ng-repeat="level in Levels" value="{{ level.Name }}" ng-model="ExerciseClozeData.Level.name">{{ level.Name }}</md-option>
+                    <md-option ng-repeat="level in Levels" value="{{ level }}" ng-model="ExerciseClozeData.Level.name">{{ level }}</md-option>
+                </md-select>
+
+                <md-select ng-model="ExerciseClozeData.Name" placeholder="Exercices disponibles..." >
+                    <md-option ng-repeat="exercise in ClozeExercises" value="{{ exercise.Name }}" ng-model="ExerciseClozeData.Name">{{ exercise.Name }}</md-option>
                 </md-select>
                 <input type="text" name="exericiseName" ng-model="ExerciseClozeData.Name">
 
