--- a/ITI.ItSchool/Templates/KidSelectExercicesPage.html
+++ b/ITI.ItSchool/Templates/KidSelectExercicesPage.html
@@ -1,4 +1,12 @@
 ﻿<div ng-controller="KidSelectExercicesController">
+    <section class="row">
+        <ul class="nav nav-pills  nav-justified">
+            <li> <a href="#!/home">Accueil </a></li>
+            <!--<li> <a href="#">Avatar </a></li>
+            <li> <a href="#">Messages </a></li>-->
+            <li> <a href="#!/kid/login">Deconnexion </a></li>
+        </ul>
+    </section>
     <center>
         <h1>{{Message}}</h1>
         <table>
