--- a/ITI.ItSchool/Views/Home/Index.cshtml
+++ b/ITI.ItSchool/Views/Home/Index.cshtml
@@ -2,14 +2,17 @@
     ViewBag.Title = "It'School";
 }
 
-<section class="row">
-    <img src="../Images/LOGO_360.png" class="img-responsive" />
+<section class="row" id="sectionLogo">
+    <div class="col-xs-offset-4 col-xs-4 col-sm-offset-4 col-sm-4 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4" id="imageLogo">
+    <img src="../Images/LOGO_360.png" class="img-responsive" alt="logo" />
+    </div>
 </section>
 
 
-<div>
+<div class="row" id="IndexNgView">
     <ng-view></ng-view>
 </div>
+
 @section Scripts{
     <script src="~/Scripts/Routing.js"></script>
 }
