--- a/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
+++ b/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
@@ -86,7 +86,7 @@
 
     <div id="global">
 
-        <md-button id="leftArrow" class="md-fab" aria-label="FAB" href="#!/kid/exercices">
+        <md-button id="leftArrow" class="md-fab" aria-label="FAB" ng-click="GoBack()">
             <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
         </md-button>
 
