--- a/ITI.ItSchool/Templates/TeacherSelectExercicesPage.html
+++ b/ITI.ItSchool/Templates/TeacherSelectExercicesPage.html
@@ -17,13 +17,13 @@
             </md-fab-trigger>
             <md-fab-actions>
                 <md-button aria-label="home" class="md-fab md-raised md-mini" href="#!/home">
-                    <md-icon style="color:grey" md-svg-src="../Images/material-design-icons/svg/home.svg"></md-icon>
+                    <md-icon style="color:black" md-svg-src="../Images/material-design-icons/svg/home.svg"></md-icon>
                     <md-tooltip>
                         Accueil du site
                     </md-tooltip>
                 </md-button>
                 <md-button aria-label="logout" class="md-fab md-raised md-mini" href="#!/teacher/login">
-                    <md-icon style=" color:grey" md-svg-src="../Images/material-design-icons/svg/logout.svg">
+                    <md-icon style=" color:black" md-svg-src="../Images/material-design-icons/svg/logout.svg">
                     </md-icon>
                     <md-tooltip>
                         Déconnexion
@@ -36,7 +36,7 @@
         <h1>{{Message}}</h1>
         <table>
             <tr>
-                <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/matter">Glissé-Déposé</md-button></td>
+                <!--<td><md-button class="md-raised md-primary" href="#!/teacher/exercices/matter">Glissé-Déposé</md-button></td>-->
                 <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/battleCard">Battle Card</md-button></td>
                 <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/dictation">Dictée</md-button></td>
                 <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/cloze_exercise">Texte à trous</md-button></td>
