--- a/ITI.ItSchool/Templates/TeacherCustomizeBattleCardPage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeBattleCardPage.html
@@ -1,7 +1,7 @@
 ﻿<div ng-controller="TeacherCustomizeBattleCardController">
     <div id="global">
 
-        <md-button id="leftArrow" class="md-fab" aria-label="FAB" href="#!/teacher/exercices/battleCard">
+        <md-button id="leftArrow" class="md-fab" aria-label="FAB" ng-click="GoBack()">
             <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
         </md-button>
         <!--<md-button id="rightArrow" class="md-fab" aria-label="FAB" href="#!/teacher/exercices/battleCard/customize">
