--- a/ITI.ItSchool/Templates/TeacherLoginPage.html
+++ b/ITI.ItSchool/Templates/TeacherLoginPage.html
@@ -23,7 +23,7 @@
                 </div>
             </form>
             <div ng-show="IsLogedIn">
-                <md-button class="md-fab" aria-label="FAB" href="#!/teacher/">
+                <md-button class="md-fab" aria-label="FAB" ng-click="GoBack()">
                     <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
                 </md-button>
                 <md-button class="md-fab" aria-label="FAB" href="#!/teacher/exercices">
@@ -35,5 +35,10 @@
             <md-button class="md-raised md-primary" href="#!/kid/">Espace Élève</md-button>
         </div>
     </center>
+    <script>
+    function goBack() {
+        window.history.back();
+    }
+    </script>
 </div>
 
