--- a/ITI.ItSchool/Templates/KidLoginPage.html
+++ b/ITI.ItSchool/Templates/KidLoginPage.html
@@ -1,4 +1,22 @@
 ﻿<div ng-controller="KidLoginController">
+    <div class="lock-size" layout="row" layout-align="left">
+        <md-fab-speed-dial md-open="demo.isOpen" md-direction="{{demo.selectedDirection}}"
+                           ng-class="demo.selectedMode">
+            <md-fab-trigger>
+                <md-button aria-label="menu" class="md-fab md-warn">
+                    <md-icon md-svg-src="../Images/material-design-icons/svg/menu.svg"></md-icon>
+                </md-button>
+            </md-fab-trigger>
+            <md-fab-actions>
+                <md-button aria-label="home" class="md-fab md-raised md-mini" href="#!/home">
+                    <md-icon style="color:black" md-svg-src="../Images/material-design-icons/svg/home.svg"></md-icon>
+                    <md-tooltip>
+                        Accueil du site
+                    </md-tooltip>
+                </md-button>
+            </md-fab-actions>
+        </md-fab-speed-dial>
+    </div>
     <center>
         <h3>{{Message}}</h3>
         <div ng-show="!IsTeacher">
@@ -20,7 +38,7 @@
                 </div>
             </form>
             <div ng-show="IsLogedIn">
-                <md-button class="md-fab" aria-label="FAB" href="#!/kid/">
+                <md-button class="md-fab" aria-label="FAB" ng-click="GoBack()">
                     <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
                 </md-button>
                 <md-button class="md-fab" aria-label="FAB" href="#!/kid/exercices">
