--- a/ITI.ItSchool/Templates/KidPlayDictationPage.html
+++ b/ITI.ItSchool/Templates/KidPlayDictationPage.html
@@ -1,4 +1,29 @@
 ﻿<div ng-controller="KidPlayDictationController">
+    <div class="lock-size" layout="row" layout-align="left">
+        <md-fab-speed-dial md-open="demo.isOpen" md-direction="{{demo.selectedDirection}}"
+                           ng-class="demo.selectedMode">
+            <md-fab-trigger>
+                <md-button aria-label="menu" class="md-fab md-warn">
+                    <md-icon md-svg-src="../Images/material-design-icons/svg/menu.svg"></md-icon>
+                </md-button>
+            </md-fab-trigger>
+            <md-fab-actions>
+                <md-button aria-label="home" class="md-fab md-raised md-mini" ng-click="GoBack()">
+                    <md-icon style="color:black" md-svg-src="../Images/material-design-icons/svg/home.svg"></md-icon>
+                    <md-tooltip>
+                        Accueil
+                    </md-tooltip>
+                </md-button>
+                <md-button aria-label="logout" class="md-fab md-raised md-mini" href="#!/kid/login">
+                    <md-icon style=" color:black" md-svg-src="../Images/material-design-icons/svg/logout.svg">
+                    </md-icon>
+                    <md-tooltip>
+                        Déconnexion
+                    </md-tooltip>
+                </md-button>
+            </md-fab-actions>
+        </md-fab-speed-dial>
+    </div>
     <center>
         <div ng-show="!EasySelected && !MediumSelected && !HardSelected">
             <h1>{{Message}}</h1>
