--- a/ITI.ItSchool/Templates/TeacherLoginPage.html
+++ b/ITI.ItSchool/Templates/TeacherLoginPage.html
@@ -1,4 +1,22 @@
 ﻿<div ng-controller="TeacherLoginController">
+    <div class="lock-size" layout="row" layout-align="left">
+        <md-fab-speed-dial md-open="demo.isOpen" md-direction="{{demo.selectedDirection}}"
+                           ng-class="demo.selectedMode">
+            <md-fab-trigger>
+                <md-button aria-label="menu" class="md-fab md-warn">
+                    <md-icon md-svg-src="../Images/material-design-icons/svg/menu.svg"></md-icon>
+                </md-button>
+            </md-fab-trigger>
+            <md-fab-actions>
+                <md-button aria-label="home" class="md-fab md-raised md-mini" href="#!/home">
+                    <md-icon style="color:black" md-svg-src="../Images/material-design-icons/svg/home.svg"></md-icon>
+                    <md-tooltip>
+                        Accueil du site
+                    </md-tooltip>
+                </md-button>
+            </md-fab-actions>
+        </md-fab-speed-dial>
+    </div>
     <center>
         <h3>{{Message}}</h3>
         <div ng-show="!IsKid">
